20030909
 - (tim) [regress/Makefile] Fixes for building outside of a read-only
   source tree.
 - (tim) [regress/agent-timeout.sh] s/TIMEOUT/SSHAGENT_TIMEOUT/ Fixes conflict
   with shell read-only variable.

20030908
 - (tim) [configure.ac openbsd-compat/getrrsetbyname.c] wrap _getshort and
   _getlong in #ifndef
 - (tim) [configure.ac acconfig.h openbsd-compat/getrrsetbyname.c] test for
   HEADER.ad in arpa/nameser.h
 - (tim) [ssh-keygen.c] s/PATH_MAX/MAXPATHLEN/ ok mouring@

20030907
 - (dtucker) [agent-ptrace.sh dynamic-forward.sh (all regress/)]
   Put "which" inside quotes.
 - (dtucker) [dynamic-forward.sh forwarding.sh sftp-batch.sh (all regress/)]
   Add ${EXEEXT}: required to work on Cygwin.
 - (dtucker) [regress/sftp-batch.sh] Make temporary batch file name more
   distinctive, so "rm ${BATCH}.*" doesn't match the script itself.
 - (dtucker) [regress/sftp-cmds.sh] Skip quoted file test on Cygwin.
 - (dtucker) [openbsd-compat/xcrypt.c] #elsif -> #elif
 - (dtucker) [acconfig.h] Typo.
 - (dtucker) [CREDITS Makefile.in configure.ac mdoc2man.awk mdoc2man.pl]
   Replace mdoc2man.pl with mdoc2man.awk, provided by Peter Stuge.

20030906
 - (dtucker) [acconfig.h configure.ac uidswap.c] Prefer setuid/setgid on AIX.

20030905
 - (dtucker) [Makefile.in] Add distclean target for regress/, fix clean target.

20030904
 - (dtucker) Portablize regression tests.  Parts contributed by Roumen
   Petrov, David M. Williams and Corinna Vinschen.
   - [Makefile.in] Add "make tests" target and "make clean" hooks.
   - [regress/agent-getpeereid.sh] Skip test on platforms that don't support
     getpeereid.
   - [regress/agent-ptrace.sh] Skip tests if platform doesn't support it or
     gdb cannot be found.
   - [regress/reconfigure/sh] Make path to sshd fully qualified if required.
   - [regress/rekey.sh] Remove dependence on /dev/zero (not all platforms have
     it).  The sparse file will take less disk space too.